[package]
name = "ssl-expiration2"
version = "0.3.0"
description = "Checks SSL certificate expiration"
authors = ["Onur Aslan <onur@onur.im>", "Daniel Dettlaff <dmilith@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VerKnowSys/ssl-expiration"
documentation = "https://docs.rs/ssl-expiration"
edition = "2018"

[dependencies]
error-chain = "0.12.4"
openssl = "0.10.32"
openssl-sys = "0.9.60"

[[bin]]
name = "ssl-expiration2"
test = false
doc = false
